2007-07-20:
	* src/pam_krb5_storetmp.c: silence a compiler warning comparing the
	return code from write() with strlen().
	* src/password.c: tweak the error message which is logged when
	password changing fails to avoid "()".  Check for the presence of
	password-changing creds in the update phase, and error out if they
	aren't found.
	* src/v5.c: add v5_check_initialized_pwc() to check specifically
	for password-changing credentials.
	* src/v4.c,src/v5.c,src/auth.c,src/session.c: distinguish between
	ccache and ticket files which we create for users and those which
	we create for our own use (which needn't involve the helper).
	* src/options.c: let options_l() take a default value.
	* configure.ac,src/options.c: let the user specify a default
	"use_shmem" and "external" value at build-time.

2007-07-19:
	* src/acct.c: return ignore instead of user-unknown for client-revoked
	errors when ignore_unknown_users has been specified, for consistency

2007-07-19:
	* src/password.c: report the synthetic PAM result from attempting to
	get password-changing creds (part of #230439)

2007-07-13:
	* src/v5.c: treat a "client revoked" error (which is generated by
	disabling the account, at least on a Windows KDC) as an "unknown
	principal" error (#230442).

2007-07-13:
	* src/v5.c: initialize the entire prompter_data structure.
	* src/v4.c,src/v5.c,src/minikafs.c,src/tokens.c,src/init.c: use the
	error_message wrapper.
	* src/auth.c: check for NULL or empty passwords.

2007-07-12:
	* src/stash.c: switch from saving a path and removing the file to a
	push/pop interface, allowing multiple ccaches and ticket files to
	exist at the same time
	* src/v4.c,src/v5.c: use push/pop to create/remove files
	* src/tokens.c: use the topmost ccache name
	* src/session.c: don't skip creating ccache/ticket files when we've
	already done so

2007-07-10:
	* src/options.c: be more careful about freeing a couple of list
	parameters.

2007-07-10: